[package]
name = "sync-cell"
version = "0.2.0"
authors = ["Tomaso2468"]
edition = "2021"
description = "A collection of easier to use thread-safe types for the creation of larger thread safe systems."
repository = "https://github.com/Tomaso2468/sync-cell.git"
keywords = ["sync", "concurrent", "cell"]
categories = ["concurrency"]
include = [
    "Cargo.toml",
    "src/**.rs"
]
